--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  font-family: "Space Mono", monospace;
+}
